Add images to Upcoming section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
   </div> <!-- end event -->
   <div class="upcoming"> <!-- begin upcoming -->
     <div class="container">
-
+      <div class="upcoming-first">
+        <img src="images/upcoming-first.png">
+      </div>
+      <div class="upcoming-second">
+        <img src="images/upcoming-second.png">
+      </div>
+      <div class="upcoming-third">
+        <img src="images/upcoming-third.png">
+      </div>
     </div>
   </div> <!-- end upcoming -->
   <footer>
