Add Start Your Own Mob section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
       <div class="upcoming-third">
         <img src="images/upcoming-third.png">
       </div>
+      <div class="start-your-mob">
+        <h5>Start your own mob.</h5>
+        <hr />
+        <div class="number">1</div>
+        <div class="number">2</div>
+        <div class="number">3</div>
+        <span class="steps">Upload a <br />Mob</span>
+        <span class="steps">Write Mob <br />Message</span>
+        <span class="steps">Upload Mob <br />Reward</span>
+        <button>
+          <span class="start-a-mob">Start a Mob</span>
+        </button>
+      </div>
     </div>
   </div> <!-- end upcoming -->
   <footer>
