Finish top half of Upcoming section

--- a/index.html
+++ b/index.html
@@ -77,13 +77,23 @@
     <div class="container">
       <div class="upcoming-first">
         <img src="images/upcoming-first.png">
+        <h6>J.Crew Men's Watches</h6>
+        <span class="time-left"><img src="images/clock.png">3:12:43</span>
+        <span class="stats">52 Mobbers, 100 Mobbers Needed</span>
       </div>
       <div class="upcoming-second">
         <img src="images/upcoming-second.png">
+        <h6>Free Appetizer at Ruth's Chris Steak House</h6>
+        <span class="time-left"><img src="images/clock.png">3:12:43</span>
+        <span class="stats">52 Mobbers, 100 Mobbers Needed</span>
       </div>
       <div class="upcoming-third">
         <img src="images/upcoming-third.png">
+        <h6>Presale for Twisted Sister Reunion Tour</h6>
+        <span class="time-left"><img src="images/clock.png">3:12:43</span>
+        <span class="stats">52 Mobbers, 100 Mobbers Needed</span>
       </div>
+      <hr />
       <div class="start-your-mob">
         <h5>Start your own mob.</h5>
         <hr />
