Finish bottom half of Upcoming section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,31 @@
         <span class="stats">52 Mobbers, 100 Mobbers Needed</span>
       </div>
       <hr />
+      <div class="upcoming-mobs">
+        <h4>Upcoming Mobs</h4>
+        <table class="upcoming">
+          <tr>
+            <td class="name">Muse's New Album Release</td>
+            <td class="needed">100 Mobbers Needed</td>
+            <td class="date">Thursday, April 4, 2012</td>
+          </tr>
+          <tr>
+            <td class="name">P.F. Chang's Restaurant</td>
+            <td class="needed">100 Mobbers Needed</td>
+            <td class="date">Thursday, April 4, 2012</td>
+          </tr>
+          <tr>
+            <td class="name">J.Crew Men's Watch Sale</td>
+            <td class="needed">100 Mobbers Needed</td>
+            <td class="date">Thursday, April 4, 2012</td>
+          </tr>
+          <tr>
+            <td class="name">J.Crew Men's Watch Sale</td>
+            <td class="needed">100 Mobbers Needed</td>
+            <td class="date">Thursday, April 4, 2012</td>
+          </tr>
+        </table>
+      </div>
       <div class="start-your-mob">
         <h5>Start your own mob.</h5>
         <hr />
