Fix thickness of Start Your Mob hr

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
       <div class="start-your-mob">
         <h5>Start your own mob.</h5>
-        <hr />
+        <hr class="start-your-mob-line" />
         <div class="number">1</div>
         <div class="number">2</div>
         <div class="number">3</div>
